@@ -186,4 +186,9 @@ define ("STATISTICS_TRUSTED", "127.0.0.1");
 define ("FOOTER_SHOW_NOTES", true);
 define ("FOOTER_SHOW_COPYING", true);
 
+// 
+// Define the string used in the title for each page.
+// 
+define ("HTML_PAGE_TITLE", "Batchelor");
+
 ?>
